header 90% (bug hover button), bug home path

--- a/src/frontend/admin-online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
+++ b/src/frontend/admin-online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
@@ -69,19 +69,11 @@
     color: black;
 }
 
-.social-contact-button {
+.social-contact {
     position: fixed;
     margin-left: 1550px;
     margin-top: 30px;
     font-size: 32px;
     color: black;
+    color: black;
 }
-
-// .btn {
-//     position: fixed;
-//     background-color: white;
-//     font-size: 32px;
-//     color: black;
-//     top: 30px;
-//     left: 1550px;
-// }
