--- a/src/frontend/online-book-store/src/pages/GuestDetailsBook/GuestDetailsBook.module.scss
+++ b/src/frontend/online-book-store/src/pages/GuestDetailsBook/GuestDetailsBook.module.scss
@@ -483,3 +483,27 @@
     font-weight: bold;
     color: var(--white);
 }
+
+.cmt-more-btn {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px;
+    height: 100px;
+    color: var(--white);
+    font-weight: 500;
+    background-color: var(--guest-darkblue-full);
+    border: 4px solid var(--guest-darkblue-full);
+    font-size: 24px;
+    border-radius: 25px;
+    margin-top: 40px;
+    transition: background 0.25s ease-in-out, color 0.25s ease-in-out, transform 0.25s ease-in-out;
+}
+
+.cmt-more-btn:hover {
+    background: var(--guest-semi-lightblue-full);
+    color: var(--black);
+    transform: scale(1.05);
+    font-weight: 700;
+    border: 4px solid var(--guest-lightblue-full);
+}
