--- a/src/frontend/admin-online-book-store/src/components/Button/Button.module.scss
+++ b/src/frontend/admin-online-book-store/src/components/Button/Button.module.scss
@@ -31,6 +31,17 @@
     }
 }
 
+.primary1 {
+    background-color: transparent;
+    font-weight: 300;
+    color: black;
+    
+    &:hover {
+        color: black;
+        cursor: pointer;
+    }
+}
+
 .addtocart {
     width: 100%;
     padding: 8px 16px;
