--- a/src/frontend/admin-online-book-store/src/pages/Events/Events.scss
+++ b/src/frontend/admin-online-book-store/src/pages/Events/Events.scss
@@ -2,3 +2,34 @@
     height: 100vh;
     background-color: #F5F5F5;
 }
+
+
+.wrapper-header {
+    height: 100px;
+    box-shadow: 0px 1px 10px grey;
+    display: flex;
+    // justify-content: center;
+    position: fixed;
+    top: 100px;
+    bottom: 0;
+    left: 300px;
+    right: 0;
+    z-index: 99;
+    background-color: var(--white);
+}
+
+.container-header {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    // align-items: center;
+    justify-content: space-between;
+    background-color: #343434;
+}
+
+.search-bar {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 330px;
+}
