--- a/src/frontend/admin-online-book-store/src/pages/Events/Events.scss
+++ b/src/frontend/admin-online-book-store/src/pages/Events/Events.scss
@@ -1,4 +1,12 @@
 .events {
-    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+
+    width: 100%;
+    position: relative;
+
+    padding: 64px 12px;
     background-color: #F5F5F5;
 }
