--- a/src/frontend/online-book-store/src/pages/Order/components/OrderItemBody/OrderItemBody.module.scss
+++ b/src/frontend/online-book-store/src/pages/Order/components/OrderItemBody/OrderItemBody.module.scss
@@ -23,6 +23,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    margin-left: 16px;
 }
 
 .product_title {
