--- a/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/BodyContent.module.scss
+++ b/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/BodyContent.module.scss
@@ -125,6 +125,7 @@
     padding: 8px 16px;
     text-decoration: none;
     color: var(--white);
+    cursor: pointer;
 
     &:nth-child(1) {
         margin-left: 64px;
