--- a/src/frontend/admin-online-book-store/src/pages/Events/Events.scss
+++ b/src/frontend/admin-online-book-store/src/pages/Events/Events.scss
@@ -1,12 +1,4 @@
 .events {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: baseline;
-
-    width: 100%;
-    position: relative;
-
-    padding: 64px 12px;
+    height: 100vh;
     background-color: #F5F5F5;
 }
