--- a/src/frontend/admin-online-book-store/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/frontend/admin-online-book-store/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
@@ -1,4 +1,7 @@
 .container {
-    min-height: 900px;
-    background-color: #cccccc;
+    // min-height: 900px;
+    background-color: #f5f5f5;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
