--- a/src/frontend/admin-online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
+++ b/src/frontend/admin-online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
@@ -5,7 +5,7 @@
     --search-border-radius: 92px;
 }
 
-.wrapper {
+.header-wrapper {
     height: 100px;
     box-shadow: 0px 1px 10px grey;
     display: flex;
@@ -17,6 +17,7 @@
     right: 0;
     z-index: 99;
     background-color: var(--white);
+    overflow-y: hidden;
 }
 
 .container {
@@ -26,6 +27,7 @@
     // align-items: center;
     justify-content: space-between;
     background-color: white;
+    overflow-y: hidden;
 }
 
 .logo {
@@ -35,6 +37,7 @@
 }
 
 .search-bar {
+    // position: fixed;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -48,21 +51,30 @@
 .user {
     height: 100%;
     display: flex;
-    // justify-content: center;
-    // align-items: center;
+    flex-direction: column;
+    position: fixed;
     cursor: pointer;
-    padding: 30px 200px;
+    background-color: transparent;
+    width: 45px;
+    height: 60px;
+    margin-top: 26px;
+    margin-left: 1650px;
 }
 
 .avatar {
-    width: 40px;
-    height: 40px;
+    // position: fixed;
+    display: inline-block;
+    // margin-left: -240px;
+    // margin-left: 1650px;
+    width: 45px;
+    height: 45px;
     border-radius: 999px;
     object-fit: cover;
 }
 
 .name {
-    margin-top: 7px;
+    position: fixed;
+    margin-top: 10px;
     margin-left: 5px;
     font-size: 1.8rem;
     // color: var(--text-color);
@@ -72,8 +84,8 @@
 .social-contact {
     position: fixed;
     margin-left: 1550px;
+    margin-right: 0px;
     margin-top: 30px;
     font-size: 32px;
-    color: black;
     color: black;
 }
