--- a/src/frontend/admin-online-book-store/src/components/Layouts/DefaultLayout/SideBar/SideBar.scss
+++ b/src/frontend/admin-online-book-store/src/components/Layouts/DefaultLayout/SideBar/SideBar.scss
@@ -14,6 +14,9 @@
     right: 0;
     z-index: 99;
     background-color: var(--bg-color);
+    overflow-x: hidden;
+    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .logo {
