--- a/src/frontend/admin-online-book-store/src/pages/OrderSettings/OrderSettings.scss
+++ b/src/frontend/admin-online-book-store/src/pages/OrderSettings/OrderSettings.scss
@@ -1,4 +1,150 @@
+:root {
+    --select-width: 200px;
+    --select-height: 100px;
+}
+
 .order-settings {
+    // position: relative;
     height: 100vh;
-    background-color: #F5F5F5;
+    margin-left: 300px;
+    margin-top: 100px;;
+    background-color: #f5f5f5;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    overflow: hidden;
+}
+
+.order-settings-filter {
+    // position: static;
+    height: 100px;
+    width: 1600px;
+    margin-left: 10px;
+    margin-top: 5px;;
+    background-color: white;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    overflow: hidden;
+}
+
+.page-box {
+    display: inline-block;
+    margin-top: -5px;
+    margin-left: 35px;
+    margin-right: -25px;
+    vertical-align: middle;
+    height: 50px;
+    width: 170px;
+    border-radius: 5px;
+    text-align: center;
+    padding: 12px;
+    background-color: white;
+    font-size: 16px;
+    font-weight: bold;
+    border: 1px solid #CCCCCC;
+}
+.page-btn {
+    margin-top: 25px;
+    margin-left: 35px;
+    margin-right: -25px;
+    // height: 35px;
+    // width: 35px;
+    padding: 10px 10px;
+    border-radius: 5px;
+    background-color: white;
+    font-size: 15px;
+    font-weight: bold;
+    border: 1px solid #CCCCCC;
+    transition: 0.3s;
+    &:hover {
+        background-color: #CCCCCC;
+    }
+}
+
+// .custom-select {
+//     // display: inline-block;
+//     position: felix;
+//     margin-left: 500px;
+//     margin-top: 20px;
+//     height: 50px;
+//     width: var(--select-width);
+//     border: 1px solid #CCCCCC;
+//     border-radius: 5px;
+//     background-color: white;
+//     color: black;
+//     display: inline-block;
+//     text-align: left;
+//     padding: 10px 10px;
+//     font-size: 16px;
+// }
+
+.option-filter {
+    // position: felix;
+    margin-left: 500px;
+    margin-top: 20px;
+    // height: 50px;
+    width: var(--select-width);
+    display: inline-block;
+    text-align: left;
+}
+
+.wrapper-select {
+    width: 100%;
+}
+
+.heading-select {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--white);
+
+    position: relative;
+}
+
+.title-select {
+    position: felix;
+    font-size: 1.8rem;
+    margin-right: 100px;
+    color: #808080;
+}
+
+.current_method {
+    padding: 8px 16px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.label {
+    margin-right: 16px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: var(--text-color);
+}
+
+.menu-sort {
+    width: 200px;
+    background-color: var(--white);
+    border-radius: 10px;
+    box-shadow: 1px 0 4px #ccc;
+}
+
+.method-list {
+    list-style-type: none;
+    padding: 8px 0;
+}
+
+.method-item {
+    padding: 8px 24px;
+
+    &:hover {
+        background-color: #f0f0f0;
+        cursor: pointer;
+    }
+}
+
+.method-item-text {
+    font-size: 1.8rem;
+    color: var(--text-color);
 }
