--- a/src/frontend/online-book-store/src/pages/GuestAbout/components/GuestLocation/GuestLocation.module.scss
+++ b/src/frontend/online-book-store/src/pages/GuestAbout/components/GuestLocation/GuestLocation.module.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 32px 64px;
-    background-color: var(--guest-semi-darkblue-half);
+    background-color: var(--guest-blue-half);
 }
 
 .info {
