Update Contact and Guest Contact

--- a/src/frontend/online-book-store/src/pages/GuestContact/components/GuestFAQItem/GuestFAQItem.module.scss
+++ b/src/frontend/online-book-store/src/pages/GuestContact/components/GuestFAQItem/GuestFAQItem.module.scss
@@ -5,13 +5,13 @@
 
 .title {
     font-size: 2.4rem;
-    color: var(--white);
+    color: var(--black);
     margin-bottom: 8px;
     font-style: italic;
 }
 
 .description {
     font-size: 1.6rem;
-    color: var(--white);
+    color: var(--guest-darkgray-full);
     font-style: italic;
 }
