--- a/src/frontend/online-book-store/src/pages/GuestContact/GuestContact.module.scss
+++ b/src/frontend/online-book-store/src/pages/GuestContact/GuestContact.module.scss
@@ -10,7 +10,7 @@
 .content {
     width: 900px;
     height: 900px;
-    border: 12px solid var(--guest-semi-lightblue-full);
+    border: 12px solid var(--guest-semi-darkblue-full);
     padding: 48px 128px;
 }
 
@@ -24,7 +24,7 @@
 .label {
     font-size: 2rem;
     font-weight: 500;
-    color: #808080;
+    color: var(--guest-semi-darkblue-full);
 }
 
 .form-container {
@@ -41,13 +41,13 @@
     padding: 4px;
     font-size: 1.6rem;
     letter-spacing: 1px;
-    border-bottom: 1px solid var(--primary-color);
+    border-bottom: 1px solid var(--guest-semi-darkblue-half);
     background-color: transparent;
-    color: #e8898e;
-    caret-color: #e8898e;
+    color: var(--guest-darkblue-full);
+    caret-color: var(--guest-darkblue-half);
 
     &::placeholder {
-        color: var(--text-color);
+        color: var(--guest-blue-full);
     }
 }
 
@@ -65,6 +65,17 @@ textarea.input-form {
     margin-left: auto;
     margin-right: auto;
     margin-top: 64px;
+    color: var(--black);
+    background-color: var(--guest-semi-lightblue-full);
+    border: 4px solid var(--black);
+    transition: background 0.5s, color 0.5s, transform 0.5s;
+}
+
+.submit-btn:hover {
+    background-color: var(--guest-semi-darkblue-full);
+    color: var(--white);
+    border: 4px solid var(--guest-lightgray-full);
+    transform: scale(1.1);
 }
 
 // FAQs
@@ -79,7 +90,7 @@ textarea.input-form {
 .faq-header {
     width: 1200px;
     height: 300px;
-    border: 12px solid var(--primary-color);
+    border: 12px solid var(--guest-darkblue-full);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -96,13 +107,13 @@ textarea.input-form {
 .faq-subtitle {
     font-size: 2.4rem;
     font-weight: 500;
-    color: var(--primary-color);
-    letter-spacing: 2px;
+    color: var(--guest-semi-darkblue-full);
+    letter-spacing: 1px;
 }
 
 .faq-body {
     width: 980px;
     height: 100%;
-    background-color: var(--guest-darkblue-half);
+    background-color: var(--guest-semi-lightblue-full);
     padding: 0 48px 16px 48px;
 }
