--- a/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/components/ProductItem/ProductItem.module.scss
+++ b/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/components/ProductItem/ProductItem.module.scss
@@ -72,6 +72,11 @@
     margin-bottom: 8px;
 
     height: 50px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Number of lines to show */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .price {
