Book Setting cant show table

--- a/src/frontend/admin-online-book-store/src/pages/BookSettings/BookSettings.scss
+++ b/src/frontend/admin-online-book-store/src/pages/BookSettings/BookSettings.scss
@@ -69,12 +69,13 @@
     // margin-bottom: 20px;
     height: 50px;
     width: 200px;
-    padding: 10px 10px;
+    padding: 13px;
     border-radius: 5px;
     background-color: white;
     color: black;
     font-size: 15px;
     font-weight: bold;
+    text-align: center;
     border: 1px solid #CCCCCC;
     transition: 0.3s;
     &:hover {
