--- a/src/frontend/admin-online-book-store/src/pages/BookSettings/BookSettings.scss
+++ b/src/frontend/admin-online-book-store/src/pages/BookSettings/BookSettings.scss
@@ -23,7 +23,7 @@
     padding: 0px 510px;
 }
 
-.page-box {
+.page-box-book {
     position: relative;
     display: inline-block;
     margin-top: -5px;
@@ -41,9 +41,9 @@
     border: 1px solid #CCCCCC;
 }
 
-.page-btn {
+.page-btn-book {
     position: relative;
-    margin-top: 25px;
+    margin-top: 30px;
     margin-left: 35px;
     margin-right: -25px;
     // margin-bottom: 20px;
@@ -73,6 +73,7 @@
     border-radius: 5px;
     background-color: white;
     color: black;
+    box-shadow: 0px 1px 1px grey;
     font-size: 15px;
     font-weight: bold;
     text-align: center;
