--- a/src/frontend/online-book-store/src/pages/GuestShopBooks/GuestBodyContent/BodyContent.module.scss
+++ b/src/frontend/online-book-store/src/pages/GuestShopBooks/GuestBodyContent/BodyContent.module.scss
@@ -8,6 +8,7 @@
     position: relative;
 
     padding: 64px 12px 128px 12px;
+    margin-bottom: 32px;
 }
 
 .sidebar {
@@ -97,7 +98,7 @@
 
     background-color: var(--white);
     padding: 32px;
-    margin: 32px 0;
+    margin: 0;
 
     position: absolute;
     bottom: calc(-84px);
