--- a/src/frontend/online-book-store/src/pages/GuestShopBooks/GuestBodyContent/components/GuestProductItem/GuestProductItem.module.scss
+++ b/src/frontend/online-book-store/src/pages/GuestShopBooks/GuestBodyContent/components/GuestProductItem/GuestProductItem.module.scss
@@ -30,7 +30,7 @@
 }
 
 .info {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: var(--guest-gray-half);
     width: 100%;
     height: 50px;
     text-align: center;
@@ -47,7 +47,7 @@
     font-size: 1.6rem;
     font-weight: bold;
     text-transform: uppercase;
-    color: rgba(255, 255, 255, 0.8);
+    color: var(--white);
 }
 
 @keyframes fadein {
@@ -64,12 +64,19 @@
 }
 
 .title {
-    color: var(--text-color);
-    font-size: 1.8rem;
+    color: var(--guest-semi-darkblue-full);
+    font-size: 1.75rem;
     font-weight: bold;
     text-align: justify;
     text-justify: inter-word;
     margin-bottom: 8px;
+
+    height: 50px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Number of lines to show */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .price {
@@ -80,22 +87,22 @@
 }
 
 .new_price {
-    font-size: 2.4rem;
+    font-size: 2.5rem;
     font-weight: bold;
-    color: var(--discount-color);
+    color: var(--guest-semi-darkblue-full);
 }
 
 .old_price {
-    color: var(--faded-color);
-    font-size: 1.8rem;
+    color: var(--guest-semi-lightblue-full);
+    font-size: 1.5rem;
     text-decoration: line-through;
 }
 
 .discount {
     padding: 4px 8px;
-    background-color: var(--discount-color);
+    background-color: var(--guest-blue-full);
     border-radius: 5px;
-    margin-bottom: 8px;
+    margin-bottom: 4px;
 }
 
 .discount_text {
@@ -105,7 +112,7 @@
 }
 
 .description_text {
-    color: var(--faded-color);
+    color: var(--guest-gray-full);
     font-size: 1.6rem;
     height: 140px;
 
@@ -136,12 +143,12 @@
 .sold_text {
     font-size: 1.6rem;
     font-weight: bold;
-    color: var(--text-color);
+    color: var(--guest-semi-darkblue-full);
     margin-right: 16px;
 }
 
 .sold_number {
-    color: var(--discount-color);
+    color: var(--guest-semi-darkblue-full);
     font-size: 1.6rem;
     font-weight: bold;
 }
