--- a/src/frontend/online-book-store/src/pages/CartPage/components/CheckoutAddress/CheckoutAddress.module.scss
+++ b/src/frontend/online-book-store/src/pages/CartPage/components/CheckoutAddress/CheckoutAddress.module.scss
@@ -49,6 +49,10 @@
     max-height: var(--address-item-height);
 }
 
+.address {
+    max-width: 600px;
+}
+
 .user_contact_info {
     display: flex;
     align-items: center;
