--- a/src/frontend/online-book-store/src/pages/Order/components/OrderItem/OrderItem.module.scss
+++ b/src/frontend/online-book-store/src/pages/Order/components/OrderItem/OrderItem.module.scss
@@ -6,8 +6,14 @@
 }
 
 .order_item_wrapper {
+    margin-top: 16px;
+
     &:hover {
         cursor: pointer;
+    }
+
+    &:nth-child(1) {
+        margin-top: 0;
     }
 }
 
