--- a/src/frontend/admin-online-book-store/src/pages/AddBook/AddBook.scss
+++ b/src/frontend/admin-online-book-store/src/pages/AddBook/AddBook.scss
@@ -111,6 +111,7 @@
 input {
     border-radius: 5px;
     border: 1px solid #CCCCCC;
+    color: black;
 }
 
 input[type=text1] {
@@ -147,7 +148,7 @@ input[type=text2]::placeholder {
     display: inline-block;
     position: relative;
     margin-top: 30px;
-    margin-left: 1620px;
+    margin-left: 1000px;
     height: 75px;
     width: 200px;
     padding: 20px;
