--- a/src/frontend/online-book-store/src/pages/CartPage/components/Checkout/Checkout.module.scss
+++ b/src/frontend/online-book-store/src/pages/CartPage/components/Checkout/Checkout.module.scss
@@ -186,3 +186,67 @@
 
     box-shadow: 4px 4px 4px rgba($color: #000000, $alpha: 0.25);
 }
+
+/* Success checkout */
+
+.success_checkout {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba($color: #000000, $alpha: 0.25);
+    z-index: 999;
+}
+
+.popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 800px;
+    background-color: var(--white);
+    border-radius: 30px;
+}
+
+.popup_header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: relative;
+
+    background-color: #50c878;
+    border-radius: 30px 30px 0 0;
+    padding: 16px;
+}
+
+.popup_title {
+    font-size: 4.8rem;
+    font-weight: bold;
+    color: var(--white);
+}
+
+.popup_close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 16px 24px;
+    font-size: 2.4rem;
+
+    cursor: pointer;
+
+    &:hover {
+        color: var(--white);
+    }
+}
+
+.popup_body {
+    padding: 48px 24px;
+}
+
+.popup_text {
+    font-size: 4.8rem;
+    text-align: center;
+}
