--- a/src/frontend/admin-online-book-store/src/pages/OrderSettings/OrderSettings.scss
+++ b/src/frontend/admin-online-book-store/src/pages/OrderSettings/OrderSettings.scss
@@ -156,3 +156,11 @@
     font-size: 1.8rem;
     color: var(--text-color);
 }
+
+.see-detail-btn {
+    background-color: white;
+    color: #551A8B;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;;
+}
