--- a/src/frontend/admin-online-book-store/src/pages/OrderManagement/OrderManagement.scss
+++ b/src/frontend/admin-online-book-store/src/pages/OrderManagement/OrderManagement.scss
@@ -62,37 +62,6 @@
     // height: 400px;
     // background-color: pink;
 }
-.upload-img-label {
-    margin-left: 100px;
-    font-size: 26px;
-    font-weight: normal;
-}
-.img-size {
-    width: 400px;
-    height: 600px;
-    margin-left: 000px;
-}
-
-.upload-img-btn {
-    display: inline-block;
-    position: relative;
-    margin-top: 10px;
-    margin-left: 100px;
-    height: 60px;
-    width: 200px;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #50C878;
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
-    text-align: center;
-    border: 1px solid #CCCCCC;
-    transition: 0.3s;
-    &:hover {
-        background-color: #3ca760;
-    }
-}
 
 .order-management-info-text {
     // position: fixed;
@@ -128,30 +97,58 @@ input[type=text1] {
 table.table1 {
     margin-top: 50px;
     margin-left: 5px;
-    width: 1200px;
-    font-size: 18px;
+    width: 1300px;
+    font-size: 36px;
     font-weight: bold;
     text-align: center;
     border-collapse: collapse;
     border-radius: 10px;
 }
 
-table.table1 th {
+table.table1 th.th1 {
     background-color: #AF69EF;
     color: white;
 }
 
-// table.table1 th, td {
-//     border-radius: 10px;
-//   }
+table.table1 tr.tr1, th.th1, td.td1 {
+    // border-radius: 10px;
+    font-size: 36px;
+}
 
-.statuc-box {
-    width: 200px;
-    height: 50px;
-    font-size: 24px;
+.status-box {
+    width: 500px;
+    height: 600px;
+    margin-left: 1345px;
+    margin-top: -75px;
+    font-size: 36px;
     font-weight: bold;
-    text-align: center;
-    border-radius: 5px;
-    background-color: transparent;
+    text-align: left;
+    padding: 20px;
+    background-color: pink;
     color: black;
+}
+
+.status-line {
+    margin-bottom: 20px;
+    border-bottom: 1px solid #CCCCCC;
+    padding-bottom: 20px;
+}
+
+.status-btn {
+    display: inline-block;
+    position: relative;
+    margin-top: 10px;
+    height: 80px;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #f0f0f0;
+    color: black;
+    font-size: 36px;
+    font-weight: bold;
+    text-align: left;
+    transition: 0.3s;
+    &:hover {
+        background-color: #CCCCCC;
+    }
 }
