--- a/src/frontend/online-book-store/src/pages/CartPage/components/Checkout/Checkout.module.scss
+++ b/src/frontend/online-book-store/src/pages/CartPage/components/Checkout/Checkout.module.scss
@@ -10,6 +10,7 @@
     right: 0;
     left: 0;
     background-color: rgba($color: #000000, $alpha: 0.25);
+    z-index: 999;
 }
 
 .container {
@@ -249,4 +250,44 @@
 .popup_text {
     font-size: 4.8rem;
     text-align: center;
+}
+
+/* Invalid Popup */
+
+.invalid_popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 32px;
+
+    width: 800px;
+    height: 250px;
+    background-color: rgba($color: #000000, $alpha: 0.8);
+    border-radius: 30px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    z-index: 99;
+}
+
+.invalid_popup_header {
+    color: var(--white);
+}
+
+.invalid_popup_text {
+    font-size: 3.2rem;
+}
+
+.invalid_popup_close {
+    font-size: 2.4rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding-right: 24px;
+    padding-top: 16px;
+
+    cursor: pointer;
 }
